# bevy-shell-template

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  Trunk.toml  index.html  my-game-53cd2706dcd3d586.js  my-game-53cd2706dcd3d586_bg.wasm  rust-toolchain.toml  rustfmt.toml  wasm-launcher-3db1d75753a7534a.js  wasm-launcher-3db1d75753a7534a_bg.wasm  wasm-launcher-597a21846de0c20e.js  wasm-launcher-5c1e47e9310ce3e.js  wasm-launcher-9079f20298ce45cb.js  wasm-launcher-a5a40a27b7fe2879.js  wasm-launcher-bb6015df43c0e151.js  wasm-launcher-d16dd605b7e83f9e.js
.github/: FUNDING.yml  dependabot.yml  renovate.json
.github/workflows/: build.yml  ci.yml  clippy.yml  release-dockerhub.yml  release-gh-pages.yml  release-ios.yml  release-mobile.yml  release-native.yml  release.yml  test.yml
launchers/ios/: Cargo.toml  run-ios-sim.sh  rust-toolchain.toml
launchers/ios/src/: main.rs
launchers/native/: Cargo.toml  run-native.sh  rust-toolchain.toml
launchers/native/src/: main.rs
launchers/wasm/: Cargo.toml  Docker.nginx.conf  Trunk.toml  index.html  robots.txt  rust-toolchain.toml  sitemap.xml
launchers/wasm/src/: main.rs
launchers/wasm/static/: site.webmanifest
src/: lib.rs  main.rs
static/: browserconfig.xml
