[package]
name = "my-game"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "launchers/wasm",
    "launchers/native",
]

exclude = [
    "launchers/ios",
]

[[bin]]
name="native-launcher"
path="launchers/native/src/main.rs"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package.my-game]
opt-level = 0
[profile.dev.package."*"]
opt-level = 3

# Optimizations for WASM
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy = "0.8.1"
image = "0.24.5"
winit = "0.27.5"
