[package]
name = "ios-launcher"
version = "0.1.0"
edition = "2021"
description = "Bevy cross platform template"

[package.metadata.bundle]
name = "ios-launcher"
identifier = "com.example.ios-launcher"
icon = ["assets/bevy.png"]
resources = ["assets"]


[dependencies]
my-game = { package = "my-game", path = "../.." }
bevy = "0.8"
image = "0.24.5"
winit = "0.27.5"
