[package]
name = "ios-launcher"
version = "0.1.0"
edition = "2021"
description = "a description is necessary for an iOS app"

[package.metadata.bundle]
name = "ios-launcher"
identifier = "com.example.ios-launcher"
icon = ["static/icon.png"]
resources = ["assets/", "static/"]

[dependencies]
game = { path = "../.." }
bevy = "0.9.1"
image = "0.24.5"
winit = "0.27.5"
