[package]
name = "wasm-launcher"
version = "0.1.0"
edition = "2021"
workspace = "../.."

# Optimizations for WASM
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
my-game = { package = "my-game", path = "../.." }
bevy = "0.8"
web-sys = { version="0.3.59", features=["Document", "Window"] }
yew = "0.19.3"
stylist = { version= "0.10.1", features=["yew_integration"] }